--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,10 @@
 <app-header></app-header>
 
-<div class="container-fluid">
-    <div class="row">
-        <nav></nav>
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-            <router-outlet></router-outlet>
-        </main>
-    </div>
+<div>
+    <nav></nav>
+    <main role="main" class="main-content container-fluid">
+        <router-outlet></router-outlet>
+    </main>
 </div>
 
 <app-footer></app-footer>
