--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -5,7 +5,7 @@
 
     <!-- search input -->
     <input class="form-control form-control-dark w-100" type="text" placeholder="Symbol"
-        aria-label="Symbol" [(ngModel)]="query" (keyup.enter)="onEnter()">
+        aria-label="Symbol" [(ngModel)]="query" (keyup.enter)="onEnter()" autofocus>
 
     <!-- navigation -->
     <ul class="navbar-nav px-3">
