Inplemented calculation of equity growth

--- a/src/app/pages/dashboard/dashboard-page.component.html
+++ b/src/app/pages/dashboard/dashboard-page.component.html
@@ -66,4 +66,21 @@
             </div>
         </ng-container>
     </div>
+
+    <!-- financials -->
+    <div class="card-columns" *ngIf="headerState.searchRequest.symbol">
+
+        <ng-container *ngFor="let financeValue of finance">
+            <div class="card">
+                <div class="card-header">
+                    {{ financeValue.de }}
+                </div>
+                <div class="card-body">
+                    {{ financeValue.value }}
+                </div>
+            </div>
+        </ng-container>
+
+    </div>
+
 </ng-container>
