--- a/src/app/pages/dashboard/dashboard-page.component.html
+++ b/src/app/pages/dashboard/dashboard-page.component.html
@@ -81,6 +81,19 @@
             </div>
         </ng-container>
 
+        <ng-container *ngFor="let keyStatValue of keyStat">
+            <div class="card">
+                <div class="card-header">
+                    {{ keyStatValue.de }}
+                </div>
+                <div class="card-body">
+                    {{ keyStatValue.value }}
+                </div>
+            </div>
+        </ng-container>
+
+
+
     </div>
 
 </ng-container>
