Implemented value status

--- a/src/app/shared/headline/headline.component.html
+++ b/src/app/shared/headline/headline.component.html
@@ -1,4 +1,4 @@
 <div class="headline">
     <div>{{ deu }}</div>
-    <div class="text-muted">{{ eng }}</div>
+    <div class="sub-headline">{{ eng }}</div>
 </div>
