--- a/src/app/pages/dashboard/dashboard-page.component.html
+++ b/src/app/pages/dashboard/dashboard-page.component.html
@@ -59,25 +59,25 @@
 
         <!-- financials -->
         <ng-container *ngFor="let financeValue of finance">
-            <div class="card">
+            <div class="card" [ngClass]="getStatusColor(financeValue)">
                 <div class="card-header">
                     <app-headline [deu]="financeValue.deu" [eng]="financeValue.eng"></app-headline>
                 </div>
                 <div class="card-body">
                     {{ financeValue.value }}
-                    <span *ngIf="financeValue.type === typePerc">%</span>
+                    <span *ngIf="financeValue.type === 0">%</span>
                 </div>
             </div>
         </ng-container>
 
         <ng-container *ngFor="let keyStatValue of keyStat">
-            <div class="card">
+            <div class="card" [ngClass]="getStatusColor(keyStatValue)">
                 <div class="card-header">
                     <app-headline [deu]="keyStatValue.deu" [eng]="keyStatValue.eng"></app-headline>
                 </div>
                 <div class="card-body">
                     {{ keyStatValue.value }}
-                    <span *ngIf="keyStatValue.type === typePerc">%</span>
+                    <span *ngIf="keyStatValue.type === 0">%</span>
                 </div>
             </div>
         </ng-container>
