--- a/src/app/pages/dashboard/dashboard-page.component.html
+++ b/src/app/pages/dashboard/dashboard-page.component.html
@@ -62,7 +62,7 @@
                                 </div>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center">
-                                <span>{{ value.ratingLabel }}</span>
+                                <span [ngClass]="{ 'text-danger': value.rating === 0, 'text-success': value.rating === 1 }">{{ value.ratingLabel }}</span>
                             </li>
                         </ul>
                     </div>
